--- a/MVC_Project2/MVC_Project2/Views/Student/Index.cshtml
+++ b/MVC_Project2/MVC_Project2/Views/Student/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model IEnumerable<MVC_Project2.Models.Student>
+@Model s
 
 @{
     ViewBag.Title = "Index";
@@ -9,8 +10,12 @@
 
 <p>
     @Html.ActionLink("Create New", "Create")
+    @DateTime.Now.ToShortDateString();
+
+    @Html.TextArea("Create New");
+
 </p>
-<table class="table">
+@*<table class="table">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.StudentName)
@@ -37,4 +42,4 @@
     </tr>
 }
 
-</table>
+</table>*@
